--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.0",
     "google-auth-library": "^9.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.1"
   }
 }
